--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
   /*** 4.0 PAGE & TOP CONSTRUCTION ***/
   /*** 5.0 SEARCH BOXES AND BUTTONS ***/
   /*** 6.0 MAP ***/
-  /*** 7.0 WEATHER ***/
+  /*** 7.0 WEATHER RESULTS ***/
 /*------------------------------------------*/
 
 /*** 1.0 BOX SIZING ***/
@@ -24,10 +24,18 @@
 @import url('https://fonts.googleapis.com/css?family=PT Sans');
 h1{
   font-family: 'Kameron', serif;
-  font-size: 96px;
+  font-size: 86px;
   text-align: center;
   margin: 0px;
   color: #FFF; /* white */
+}
+h2{
+  font-family: 'Kameron', serif;
+  font-size: 28px;
+  color: #FFF; /* white */
+  padding: 0px;
+  margin-top: 0px;
+  margin-bottom: 5px;
 }
 h3{
   font-family: 'Kameron', serif;
@@ -62,16 +70,13 @@ body{
 }
 .page-header{
   margin-top: 0px;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   border: 0px;
-  padding-top: 40px;
-  height: 190px;
+  padding-top: 20px;
+  height: 150px;
   background: url("../images/weather_2.png");
 }
-.row{
-  width: 100%;
-  margin: 0px;
-}
+
 /*** 5.0 SEARCH BOXES AND BUTTONS ***/
 #leftSide{
   width: 40%;
@@ -79,35 +84,35 @@ body{
   padding: 0px;
   margin-top: 0px;
   margin-right: 15px;
-  margin-bottom: 30px;
-  margin-left: 30px;
+  margin-bottom: 20px;
+  margin-left: 40px;
   border: 0px;
 }
 #infoBox{
-  height: 110px;
-  padding-top: 10px;
+  height: 100px;
+  padding-top: 7px;
   padding-right: 20px;
   padding-bottom: 0px;
   padding-left: 20px;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   border-radius: 10px;
   border: 0px;
   background-color: #7DB4E0;
 }
 #placeSearch{
-  height: 100px;
-  padding-top: 10px;
+  height: 90px;
+  padding-top: 7px;
   padding-right: 20px;
   padding-bottom: 0px;
   padding-left: 20px;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   border-radius: 10px;
   border: 0px;
   background-color: #7DB4E0;
 }
 #weatherSearch{
-  height: 100px;
-  padding-top: 10px;
+  height: 90px;
+  padding-top: 7px;
   padding-right: 20px;
   padding-bottom: 0px;
   padding-left: 20px;
@@ -119,28 +124,19 @@ body{
 /*** 6.0 MAP ***/
 #map{
   width: 50%;
-  height: 370px;
+  height: 320px;
   float: right;
   border-radius: 10px;
   margin-top: 0px;
-  margin-right: 30px;
+  margin-right: 40px;
   margin-bottom: 30px;
   margin-left: 0px;
   background-color: #705d86; /* Pale Lavender */
 }
 
-/*** 7.0 WEATHER ***/
+/*** 7.0 WEATHER RESULTS ***/
 #weather-info {
-  text-align: center;
-  height:175px;
-  /*margin-left:75px;*/
+  width: 100%;
+  height:350px;
   overflow-x: scroll;
-}
-
-#new-data {
-  float:center;
-  height:125px;
-  width:150px;
-  text-align: center;
-  text-transform: uppercase;
 }
