--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,24 +37,35 @@ h2{
   margin-top: 0px;
   margin-bottom: 5px;
 }
-h3{
+h3{ /* used on weather banner only */
   font-family: 'Kameron', serif;
-  font-size: 28px;
-  color: #282828; /* Graphite */
+  font-size: 32px;
+  color: #705d86; /* Pale Lavender */
+  text-align: center;
   padding: 0px;
   margin-top: 0px;
   margin-bottom: 10px;
 }
 h4{
   font-family: 'PT Sans', sans-serif;
-  font-size: 28px;
-  text-align: center;
+  font-size: 16px;
+  padding: 0px;
   margin: 0px;
-  color: #936E35; /* white */
+  color: #282828; /* Graphite */
 }
-p{
+h5{ /* used on weather panels only */
+  font-family: 'Kameron', serif;
+  font-size: 28px;
+  color: #282828; /* Graphite */
+  text-align: center;
+  padding: 0px;
+  margin-top: 0px;
+  margin-bottom: 10px;
+}
+p{ /* used on weather panels only */
   font-family: 'PT Sans', sans-serif;
   font-size: 18px;
+  text-align: center;
 }
 
 /*** 4.0 PAGE & TOP CONSTRUCTION ***/
@@ -97,7 +108,7 @@ body{
   margin-bottom: 20px;
   border-radius: 10px;
   border: 0px;
-  background-color: #7DB4E0;
+  background-color: #7DB4E0; /* sampled blue */
 }
 #placeSearch{
   height: 90px;
@@ -108,7 +119,7 @@ body{
   margin-bottom: 20px;
   border-radius: 10px;
   border: 0px;
-  background-color: #7DB4E0;
+  background-color: #7DB4E0; /* sampled blue */
 }
 #weatherSearch{
   height: 90px;
@@ -118,7 +129,7 @@ body{
   padding-left: 20px;
   border-radius: 10px;
   border: 0px;
-  background-color: #7DB4E0;
+  background-color: #7DB4E0; /* sampled blue */
 }
 
 /*** 6.0 MAP ***/
@@ -135,8 +146,37 @@ body{
 }
 
 /*** 7.0 WEATHER RESULTS ***/
-#weather-info {
+#weather-info { /* Container for banner and panels - no styling */
   width: 100%;
-  height:350px;
+  float: right;
+}
+#weatherBanner{
+  width: 100%;
+  height: 50px;
+  padding-top: 10px;
+  margin-bottom: 20px;
+  background-color: #FFF; /* white */
+}
+#panelConatiner{
+  width: 100%;
+  padding-right: 50px;
+  padding-left: 100px;
+  margin: 0px;
   overflow-x: scroll;
+}
+#weatherPanel{
+  height: 300px;
+  width: 250px;
+  float: left;
+  padding-top: 10px;
+  padding-right: 0px;
+  padding-bottom: 0px;
+  padding-left: 10px;
+  margin-top: 0px;
+  margin-right: 15px;
+  margin-bottom: 20px;
+  margin-left: 15px;
+  border: 0px;
+  border-radius: 10px;
+  background-color: #705d86; /* Pale Lavender */
 }
