Added Bootstrap back in for row and fixed the spacing problem.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,8 +159,7 @@ body{
 }
 #panelConatiner{
   width: 100%;
-  padding-right: 50px;
-  padding-left: 100px;
+  padding: 0px;
   margin: 0px;
   overflow-x: scroll;
 }
