--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,9 +151,13 @@ body{
 /*** 7.0 WEATHER RESULTS ***/
 #weather-info { /* Container for banner and panels - no styling */
   width: 100%;
-  float: right;
-	overflow-x: auto;
+  height:300px;
+  float: left;
+	overflow-x: scroll;
+  text-align: center;
   white-space: nowrap;
+  display: none;
+  background-color: #535A60;
 }
 #weatherBanner{
   height: 50px;
@@ -165,13 +169,14 @@ body{
 #panelContainer{
   padding: 0px;
   margin: 0px;
-  overflow-x: scroll;
+
 }
 
 .weatherPanel{
-  height: 300px;
+  height: 250px;
   width: 225px;
   float: left;
+  text-align:center;
   padding-top: 10px;
   padding-right: 0px;
   padding-bottom: 0px;
@@ -201,6 +206,9 @@ body{
   margin-bottom: 0px;
   padding: 0px;
   text-shadow: 0 0 3px #282828; /* Graphite */
+}
+.cap {
+  text-transform: capitalize;
 }
 .desc{
   font-size: 18px;
