--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,9 @@
 /*-----------------INDEX---------------------*/
   /*** 1.0 BOX SIZING ***/
   /*** 2.0 COLORS ***/
-  	/* 2.1 #535A60 - Graphite */
-  	/* 2.2 #7DB4E0 - Light Blue from image */
-  	/* 2.3 #705d86 - Pale Lavender */
+    /* 2.1 #282828 - Graphite */
+    /* 2.2 #7DB4E0 - Light Blue from image */
+    /* 2.3 #705d86 - Pale Lavender */
     /* 2.4 #3369b0 - Dark Blue from image */
   /*** 3.0 TEXT & FONTS ***/
     /* 3.1 font-family: 'Kameron', serif; */
@@ -13,19 +13,26 @@
   /*** 6.0 MAP ***/
   /*** 7.0 WEATHER RESULTS ***/
 /*------------------------------------------*/
-
 /*** 1.0 BOX SIZING ***/
 * {
   box-sizing: border-box;
 }
-/* this keeps border and padding inside the box measurement */
 
+html, body{
+	height: 100%;
+}
+
+body {
+	margin: 0;
+	min-height: 100%;
+}
+/* this keeps border and padding inside the box measurement */
 /*** 3.0 TEXT & FONTS ***/
 @import url('https://fonts.googleapis.com/css?family=Kameron');
 @import url('https://fonts.googleapis.com/css?family=PT Sans');
 h1{
   font-family: 'Kameron', serif;
-  font-size: 86px;
+  font-size: 82px;
   text-align: center;
   margin: 0px;
   color: #FFF; /* white */
@@ -50,10 +57,10 @@ h3{ /* used on weather banner only */
 }
 h4{ /* used on instruction panel */
   font-family: 'PT Sans', sans-serif;
-  font-size: 16px;
+  font-size: 18px;
   padding: 0px;
   margin: 0px;
-  color: #282828; /* Graphite */
+  color: #FFF; /* White */
 }
 h5{ /* header on weather panels only */
   font-family: 'Kameron', serif;
@@ -70,95 +77,61 @@ p{ /* used on weather panels only */
   text-align: center;
   color: #FFF; /* White */
 }
-
 /*** 4.0 PAGE & TOP CONSTRUCTION ***/
 body{
   background-color: #282828; /* Graphite */
-
 }
 .container-fluid{
-  margin-left: 0px;
-  margin-right: 0px;
+  margin: 0 auto;
   padding-left: 0px;
   padding-right: 0px;
 }
 .page-header{
   margin-top: 0px;
-  margin-bottom: 20px;
-  border: 0px;
-  padding-top: 20px;
-  height: 150px;
+	width: 100%;
+	font-size: 2em;
   background: url("../images/weather_2.png");
 }
-
 /*** 5.0 SEARCH BOXES AND BUTTONS ***/
-#leftSide{
-  width: 40%;
-  float: left;
-  padding: 0px;
-  margin-top: 0px;
-  margin-right: 15px;
-  margin-bottom: 20px;
-  margin-left: 40px;
-  border: 0px;
-}
-#infoBox{
-  height: 100px;
-  padding-top: 7px;
-  padding-right: 20px;
-  padding-bottom: 0px;
-  padding-left: 20px;
-  margin-bottom: 20px;
+
+.placeSearch{
+	margin-bottom: 20px;
+  padding: 25px 20px;
   border-radius: 10px;
-  border: 0px;
   background-color: #3369b0; /* Dark Blue */
 }
-#placeSearch{
-  height: 90px;
-  padding-top: 7px;
-  padding-right: 20px;
-  padding-bottom: 0px;
-  padding-left: 20px;
-  margin-bottom: 20px;
-  border-radius: 10px;
-  border: 0px;
-  background-color: #3369b0; /* Dark Blue */
+.form-control {
+  font-size: 16pt;
+  height: 40px;
+  width: 90%;
 }
-#weatherSearch{
-  height: 90px;
-  padding-top: 7px;
-  padding-right: 20px;
-  padding-bottom: 0px;
-  padding-left: 20px;
-  border-radius: 10px;
-  border: 0px;
-  background-color: #3369b0; /* Dark Blue */
+.btn{
+  margin-top: 10px;
+  margin-right: 20px;
 }
 
+.space {
+}
 /*** 6.0 MAP ***/
 #map{
-  width: 50%;
   height: 320px;
-  float: right;
+	margin-bottom: 20px;
   border-radius: 10px;
-  margin-top: 0px;
-  margin-right: 40px;
-  margin-bottom: 20px;
-  margin-left: 0px;
   background-color: #3369b0; /* Dark Blue */
 }
-
 /*** 7.0 WEATHER RESULTS ***/
 #weather-info { /* Container for banner and panels - no styling */
   width: 100%;
-  height:300px;
-	padding: 0;
-  float: left;
-	overflow-x: scroll;
+  height: 40%;
+	position: absolute;
+	bottom: 0;
+  padding: 0;
+	margin: 0 auto;
+  overflow-x: scroll;
   text-align: center;
   white-space: nowrap;
   display: none;
-  background-color: #535A60;
+  background-color: #282828; /* Graphite */
 }
 #weatherBanner{
   height: 50px;
@@ -166,16 +139,14 @@ body{
   margin-bottom: 20px;
   background-color: #7DB4E0; /* Light Blue */
 }
-
 #panelContainer{
   padding: 0px;
-  margin: 0px;
-
+	margin: 0 auto;
 }
-
 .weatherPanel{
   height: 250px;
-  width: 225px;
+  width: 16%;
+	min-width: 200px;
   float: left;
   text-align:center;
   padding-top: 10px;
@@ -183,9 +154,9 @@ body{
   padding-bottom: 0px;
   padding-left: 10px;
   margin-top: 0px;
-  margin-right: 1.388%;
-  margin-bottom: 1.388%;
-  margin-left: 1.388%;
+  margin-right: 2%;
+  margin-bottom: 2%;
+  margin-left: 2%;
   border: 0px;
   border-radius: 10px;
   background-color: #7DB4E0; /* Light Blue */
@@ -200,13 +171,13 @@ body{
   padding: 0px;
   font-size: 48px;
   font-weight: bolder;
-  text-shadow: 0 0 10px #282828; /* Graphite */
+  text-shadow: 0 0 15px #FFF; /* White */
 }
 .low{
   font-size: 28px;
-  margin-bottom: 0px;
+  margin-bottom: 5px;
   padding: 0px;
-  text-shadow: 0 0 3px #282828; /* Graphite */
+  text-shadow: 0 0 5px #FFF; /* White */
 }
 .cap {
   text-transform: capitalize;
@@ -216,4 +187,16 @@ body{
 }
 .center {
 	margin: 0 auto;
+	width: 100%;
+	padding: 0;
+}
+
+.wrapper {
+	height: 60%;
+	width: 100%;
+	margin: 0 auto;
+}
+
+.scroll {
+	overflow-y: auto;
 }
